# EMC-NHS-Linear-Accelerator-Simulation-Project

./: CMakeLists.txt  LinacV2.cc  README.md  data.csv  data.py  data_analysis.ipynb
include/: action.hh  config.hh  constructor.hh  detector.hh  generator.hh  physics.hh
macro/: vis.mac
src/: action.cc  config.cc  constructor.cc  detector.cc  generator.cc  physics.cc
